--- a/src/static/stylesheets/modules/variables.module.scss
+++ b/src/static/stylesheets/modules/variables.module.scss
@@ -9,6 +9,9 @@
   --accent: #228be6;
   --error: #a00;
   --border: #ced4da;
+  --background--dark: #131313;
+  --text--dark: #DADADA;
+  --border--dark: #000;
 
   @keyframes fadein {
     from {
